--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "auth-service",
   "version": "0.1.0",
@@ -12,6 +11,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "ioredis": "^5.3.2"
+    "cors": "^2.8.5",
+    "axios": "^1.6.8"
   }
 }
